tests/diff/diff.exp
Error: intersection.js:9
  9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
            ^^^^^^^^^^^^^^^ intersection. This type is incompatible with
  9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 1:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
              ^^^^^^ object type
  Error:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
              ^^^^^^ object type. This type is incompatible with
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
    Property `a` is incompatible:
        9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `a`. Property not found in
        9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                  ^^^^^^ object type
  Member 2:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                       ^^^^^^ object type
  Error:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                       ^^^^^^ object type. This type is incompatible with
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
    Property `a` is incompatible:
        9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `a`. Property not found in
        9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                           ^^^^^^ object type

Error ----------------------------------------------------- intersection.js:12:8

Cannot cast `any` to `$Diff` because property `a` is missing in object type but
exists in object type.


Error ----------------------------------------------------- intersection.js:14:8

Cannot cast `any` to `$Diff` because property `a` is missing in object type but
exists in object type.


Error ------------------------------------------------------------ lower.js:21:4

Cannot get `y.age` because property `age` is missing in `Person`.


Error ------------------------------------------------------------ lower.js:22:2

Cannot cast `y.name` to number because string is incompatible with number.


Error ------------------------------------------------------------ lower.js:23:3

Cannot get `y.bla` because property `bla` is missing in `Person`.


Error --------------------------------------------------------- undefined.js:8:8

Cannot cast `any` to `$Diff` because property `a` is missing in object type but
exists in object type.


Error ------------------------------------------------------- undefined.js:10:12

Cannot cast `any` to `$Diff` because in property `a`, undefined is incompatible
with `A`.



Found 8 errors
